--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,32 +19,7 @@
 				"$gcc"
 			],
 			"group": "build",
-			"detail": "compiler: C:\\MinGW\\bin\\gcc.exe",
-			"dependsOn": "run program"
-		},
-		{
-			"type": "shell",
-			"label": "run program",
-			"dependsOn": "Open PowerShell",
-			"command": "${fileDirname}\\target\\${fileBasenameNoExtension}.exe",
-			"group": {
-				"kind": "test",
-				"isDefault": true
-			}
-		},
-		{
-			"label": "Open PowerShell",
-			"type": "shell",
-			"command": "PowerShell.exe",
-			"args": [],
-			"windows": {
-				"options": {
-					"shell": {
-						"executable": "PowerShell.exe",
-						"args": []
-					}
-				}
-			}
+			"detail": "compiler: C:\\MinGW\\bin\\gcc.exe"
 		}
 	]
 }
